Bug 1528119 - Add Discovery design tweaks, preference visibility and bug fixes to Activity Stream r=k88hudson
Differential Revision: https://phabricator.services.mozilla.com/D19880

--- a/browser/components/newtab/content-src/components/ASRouterAdmin/ASRouterAdmin.scss
+++ b/browser/components/newtab/content-src/components/ASRouterAdmin/ASRouterAdmin.scss
@@ -155,5 +155,10 @@
   .ds-component {
     margin-bottom: 20px;
   }
+
+  .optOutNote {
+    font-size: 12px;
+    margin-inline-start: 4px;
+  }
 }
 
